# VisionOCR

./: .gitignore  CLAUDE.md  README.md  app_screen_capture.py  app_window.py  build.py  config.ini  config_manager.py  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  service_ocr.py  service_text.py
.claude/: settings.local.json
.claude/hooks/: PostToolUse.ps1  SessionEnd.ps1  Stop.ps1
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md  windows_commands.md
app/: __init__.py  app_screen_capture.py  app_window.py
docs/: CHANGELOG.md  LICENSE  README.md
external_service/: vision_ocr_service.py
scripts/: project_structure.py  project_structure.txt
service/: file_saver.py  pdf_processor.py  service_file.py  text_widget_utils.py  vision_ocr_service.py
tests/: test_app_screen_capture.py  test_app_window.py  test_button_factory.py  test_file_saver.py  test_main.py  test_service_file.py  test_service_ocr.py  test_service_text.py  test_text_widget_utils.py  test_vision_ocr_service.py
utils/: config.ini  config_manager.py  constants.py  env_loader.py  exceptions.py  log_rotation.py
widgets/: __init__.py  button_factory.py
